[gd_scene load_steps=6 format=3 uid="uid://kaqvdgkep4vg"]

[ext_resource type="Script" path="res://script/mega_memory_ememies.gd" id="1_nbxn6"]
[ext_resource type="Texture2D" uid="uid://btf7dpi5b181n" path="res://Assets/Doctor Graphics/icon.svg" id="2_45id2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eklpl"]
radius = 119.262

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lu0ao"]
size = Vector2(66, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7ou7"]
size = Vector2(35.3864, 4.62258)

[node name="Memory Ememies" type="CharacterBody2D"]
script = ExtResource("1_nbxn6")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.0901961, 1, 1)
position = Vector2(-2, -10)
scale = Vector2(1.25, 1.51563)
texture = ExtResource("2_45id2")

[node name="Detection area" type="Area2D" parent="."]
scale = Vector2(2.80056, -2.05284)
collision_layer = 3
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection area"]
shape = SubResource("CircleShape2D_eklpl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_lu0ao")

[node name="Enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_hitbox"]
position = Vector2(-2.49996, -17.4999)
rotation = -3.14159
scale = Vector2(10.6538, -69.8744)
shape = SubResource("RectangleShape2D_r7ou7")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0.0431373, 1)
offset_left = -71.0
offset_top = 122.0
offset_right = 74.0
offset_bottom = 162.0
value = 100.0
show_percentage = false

[connection signal="body_entered" from="Detection area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_shape_entered" from="Detection area" to="." method="_on_detection_area_body_shape_entered"]
[connection signal="body_shape_exited" from="Detection area" to="." method="_on_detection_area_body_shape_exited"]
[connection signal="body_entered" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
